Projetos/ACBrFramework/jACBrFramework/ACBrFramework_JNI/include/ACBrECF.h

#define ACBr

typedef void* INTPTR;

typedef char* PCHAR;

typedef char BOOL;
#define DllImport extern "C"
#define DllImport extern


typedef struct
{
	char Indice[4];
	char Descricao[30];
	BOOL PermiteVinculado;
	char FormaPagamento[4];
	double Total;
	int Contador;
} ComprovanteNaoFiscalRec;


typedef struct
{
	char Texto[49];
} RelatorioGerencialLinha;


typedef struct
{
	int Count;
	RelatorioGerencialLinha Linhas[];
} RelatorioGerencial;

DllImport int ECF_AbreGaveta(const INTPTR ecfHandle);

DllImport int ECF_CarregaComprovantesNaoFiscais(const INTPTR ecfHandle);

DllImport int ECF_CorrigeEstadoErro(const INTPTR ecfHandle, const BOOL reducaoZ);

DllImport int ECF_GetComprovanteNaoFiscal(const INTPTR ecfHandle, ComprovanteNaoFiscalRec* comprovanteNaoFiscal, const int index);

DllImport int ECF_LeituraMemoriaFiscalArquivoData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalArquivoReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const PCHAR nomeArquivo, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada);

DllImport int ECF_LeituraMemoriaFiscalSerialData(const INTPTR ecfHandle, const double dataInicial, const double dataFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LeituraMemoriaFiscalSerialReducao(const INTPTR ecfHandle, const int reducaoInicial, const int reducaoFinal, const BOOL simplificada, PCHAR buffer, const int bufferLen);

DllImport int ECF_LerTotaisComprovanteNaoFiscal(const INTPTR ecfHandle);

DllImport int ECF_ProgramaComprovanteNaoFiscal(const INTPTR ecfHandle, const PCHAR descricao, const PCHAR tipo, const PCHAR posicao);

DllImport int ECF_RelatorioGerencial(const INTPTR ecfHandle, const RelatorioGerencial Relatorio, const int Via, const int Indice);

DllImport int ECF_Sangria(const INTPTR ecfHandle, const double valor, const PCHAR obs);

DllImport int ECF_Suprimento(const INTPTR ecfHandle, const double valor, const PCHAR obs);